Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.4.0 (??/??/2008):
	libpurple:
	* Fixed various problems with loss of status messages when going
	  or returning from idle on MySpaceIM.
	* Eliminated unmaintained Howl backend implementation for the
	  Bonjour protocol.  Avahi (or Apple's Bonjour runtime on win32) is
	  now required to use Bonjour.
	* Partial support for viewing ICQ status notes (Collin from
	  ComBOTS GmbH).
	* Support for /notice on IRC.
	* Support for Yahoo! Messenger 7.0+ file transfer method (Thanumalayan S.)
	* Support for retrieving full names and addresses from the address book
	  on Yahoo! Japan (Yusuke Odate)
	* The AIM/ICQ server-side preference for "allow others to see me
	  as idle" is no longer unconditionally set to "yes" even when
	  your libpurple preference is "no."
	* Fix SSL certificate checks for renewed certificates
	* Fix the ability to set vCard buddy icons on Google Talk/XMPP
	* D-Bus fixes on 64bit
	* Fixed retrieval of buddy icons and setting of server-side aliases on
	  Yahoo! and Yahoo! Japan when using an HTTP proxy server (Gideon N.
	  Guillen)
	* Fixed an MSN bug that would leave you appearing offline when transferred
	  to different server

	Pidgin:
	* Added the ability to theme conversation name colors (red and blue)
	  through your GTK+ theme, and exposed those theme settings to the 
	  Pidgin GTK+ Theme Control plugin (Dustin Howett)
	* Fixed having multiple alias edit areas in the infopane (Elliott Sales
	  de Andrade)
	* Save the conversation "Enable Logging" option per-contact (Moos
	  Heintzen)
	* Typing notifications are now shown in the conversation area

	Finch:
	* Color is used in the buddylist to indicate status, and the conversation
	  window to indicate various message attributes. Look at the sample gntrc
	  file in the man page for details.
	* The default keybinding for dump-screen is now M-D and uses a file